{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 44,
  "lineage": "ea1cb2d0-b279-35f3-9920-bf8cc6dc5d1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418065148:loadbalancer/app/desafio/b65010e098f4fa68",
            "arn_suffix": "app/desafio/b65010e098f4fa68",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "desafio-2013823905.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418065148:loadbalancer/app/desafio/b65010e098f4fa68",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "desafio",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048c0ae0b88b15397"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b79ef1833f31ee9"
              },
              {
                "subnet_id": "subnet-085bf66dc9d600a79"
              }
            ],
            "subnets": [
              "subnet-01b79ef1833f31ee9",
              "subnet-085bf66dc9d600a79"
            ],
            "tags": {
              "Name": "desafio"
            },
            "tags_all": {
              "Name": "desafio"
            },
            "vpc_id": "vpc-002ae81f1c496f0ca",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_desafio",
            "aws_subnet.pub_desafio_a",
            "aws_subnet.pub_desafio_b",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418065148:listener/app/desafio/b65010e098f4fa68/1e8448d4fc73053e",
            "certificate_arn": "arn:aws:acm:us-east-1:905418065148:certificate/301ec700-c911-4316-9389-6d8f5b80496e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418065148:targetgroup/desafio/1a201551c132a512",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418065148:listener/app/desafio/b65010e098f4fa68/1e8448d4fc73053e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905418065148:loadbalancer/app/desafio/b65010e098f4fa68",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.desafio",
            "aws_acm_certificate_validation.validate_crt_desafio",
            "aws_alb.desafio",
            "aws_alb_target_group.tg_desafio",
            "aws_route53_record.record_crt_validation",
            "aws_route53_zone.desafio",
            "aws_security_group.alb_desafio",
            "aws_subnet.pub_desafio_a",
            "aws_subnet.pub_desafio_b",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418065148:targetgroup/desafio/1a201551c132a512",
            "arn_suffix": "targetgroup/desafio/1a201551c132a512",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 8,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418065148:targetgroup/desafio/1a201551c132a512",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "desafio",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "dependencies": [
            "aws_alb.desafio",
            "aws_security_group.alb_desafio",
            "aws_subnet.pub_desafio_a",
            "aws_subnet.pub_desafio_b",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:internet-gateway/igw-045e0b7e2c6d7d613",
            "id": "igw-045e0b7e2c6d7d613",
            "owner_id": "905418065148",
            "tags": {
              "Name": "desafio"
            },
            "tags_all": {
              "Name": "desafio"
            },
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "dependencies": [
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:route-table/rtb-0a01275230b402a8c",
            "id": "rtb-0a01275230b402a8c",
            "owner_id": "905418065148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045e0b7e2c6d7d613",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_devops"
            },
            "tags_all": {
              "Name": "pub_devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.desafio",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_desafio_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34bb672fd18ad96",
            "route_table_id": "rtb-0a01275230b402a8c",
            "subnet_id": "subnet-01b79ef1833f31ee9"
          },
          "dependencies": [
            "aws_internet_gateway.desafio",
            "aws_route_table.pub_desafio",
            "aws_subnet.pub_desafio_a",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_desafio_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db5d79332c60f932",
            "route_table_id": "rtb-0a01275230b402a8c",
            "subnet_id": "subnet-085bf66dc9d600a79"
          },
          "dependencies": [
            "aws_internet_gateway.desafio",
            "aws_route_table.pub_desafio",
            "aws_subnet.pub_desafio_b",
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:security-group/sg-048c0ae0b88b15397",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c0ae0b88b15397",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_desafio",
            "name_prefix": "",
            "owner_id": "905418065148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_desafio"
            },
            "tags_all": {
              "Name": "alb_desafio"
            },
            "timeouts": null,
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:security-group/sg-051d6a343210e7621",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-051d6a343210e7621",
            "ingress": [],
            "name": "ecs_node_desafio",
            "name_prefix": "",
            "owner_id": "905418065148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_node_desafio"
            },
            "tags_all": {
              "Name": "ecs_node_desafio"
            },
            "timeouts": null,
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:security-group/sg-070b5f755806eef98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070b5f755806eef98",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_task_desafio",
            "name_prefix": "",
            "owner_id": "905418065148",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_desafio_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:subnet/subnet-01b79ef1833f31ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b79ef1833f31ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418065148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_desafio_a"
            },
            "tags_all": {
              "Name": "pub_desafio_a"
            },
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "dependencies": [
            "aws_vpc.desafio"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_desafio_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:subnet/subnet-085bf66dc9d600a79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085bf66dc9d600a79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418065148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_desafio_b"
            },
            "tags_all": {
              "Name": "pub_desafio_b"
            },
            "vpc_id": "vpc-002ae81f1c496f0ca"
          },
          "dependencies": [
            "aws_vpc.desafio"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "desafio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418065148:vpc/vpc-002ae81f1c496f0ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-015e2ae25c3508883",
            "default_route_table_id": "rtb-0c10cd88ccb018590",
            "default_security_group_id": "sg-0b890615039296e7f",
            "dhcp_options_id": "dopt-0fe190827f980cc7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002ae81f1c496f0ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c10cd88ccb018590",
            "owner_id": "905418065148",
            "tags": {
              "Name": "desafio-devops"
            },
            "tags_all": {
              "Name": "desafio-devops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}